--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -19,6 +19,8 @@
 
     .menu_popup_item {
         font-size: 36px;
+        backdrop-filter: blur(20px);
+
     }
 }
 
@@ -141,6 +143,8 @@
 
 .menu_popup {
     padding: 2vw;
+    backdrop-filter: blur(20px);
+
 }
 
 .cover_index {
