--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -6,7 +6,6 @@ body {
     width: 100%;
     display: block;
     margin: 0 auto;
-    /* position: relative; */
     font-family: 'Arial', sans-serif;
 }
 
@@ -108,6 +107,7 @@ p {
     width: 100%;
     height: 100%;
     backdrop-filter: blur(40px);
+    -webkit-backdrop-filter: blur(40px);
     background-color: rgba(255, 255, 255, 0.5);
     text-align: center;
     display: flex;
@@ -168,8 +168,6 @@ p {
     font-size: 20px;
 }
 
-
-
 form {
     padding: 8vw 25% 0 25%;
 }
@@ -212,6 +210,8 @@ button {
     width: 100%;
     height: 100%;
     backdrop-filter: blur(40px);
+    -webkit-backdrop-filter: blur(40px);
+
     background-color: rgba(255, 255, 255, 0.5);
     text-align: center;
     display: flex;
@@ -304,7 +304,7 @@ button {
 }
 
 .card_info p {
-    font-size: 4vw;
+    font-size: 30px;
 }
 
 .price {
