--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -168,6 +168,15 @@ p {
     font-size: 20px;
 }
 
+.aboutImg {
+    width: 100%;
+    height: 200px;
+    background-image: url(../images/letters.svg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 form {
     padding: 8vw 25% 0 25%;
 }
